Issue #2766531 by slashrsm, samuel.mortenson: Allow users to toggle the visibility of their selection in the multi-step selection display

--- a/css/entity_browser.entity_list.css
+++ b/css/entity_browser.entity_list.css
@@ -23,3 +23,7 @@
 .entities-list .rendered-entity {
   display: block;
 }
+
+.entities-list.hidden {
+  display: none;
+}
